# doublecross-cpp

./: .gitignore  Makefile.am  configure.ac
go/: channel.cc  channel.h
haskell/: cat.cc  fdwrap.cc  fdwrap.h  list.h  maybe.h  monad.h  newcpp.cc  orerror.h
